categories and products by category

--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,6 +1,6 @@
-<footer>
-    <div class="py-0 py-1">
-        <div class="container">
+<footer class="footer">
+    <div class="container">
+        <div class="py-0 py-1">
             <h5>SpringShop &copy;</h5>
         </div>
     </div>
