--- a/src/app/shared/footer/footer.component.sass
+++ b/src/app/shared/footer/footer.component.sass
@@ -1,2 +1,8 @@
-footer
-    background-color: #d38a68
+.footer
+  position: relative
+  left: 0
+  bottom: 0
+  width: 100%
+  background-color: #d38a68
+  color: white
+  text-align: center
