--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,14 +1,14 @@
 <ngb-carousel
-[showNavigationArrows]="false" 
-[showNavigationIndicators]="true"
-interval="5000"
-[keyboard]="false"
-[pauseOnHover]="false"
-[wrap]="true"
+  [showNavigationArrows]="false"
+  [showNavigationIndicators]="true"
+  interval="5000"
+  [keyboard]="false"
+  [pauseOnHover]="false"
+  [wrap]="true"
 >
   <ng-template ngbSlide>
     <div class="picsum-img-wrapper">
-      <img src="../../../assets/images/camping.jpg" alt="camping explorer"/>
+      <img src="../../../assets/images/camping.jpg" alt="camping explorer" />
     </div>
     <div class="carousel-caption">
       <h4>Title Goes Here</h4>
@@ -17,7 +17,7 @@ interval="5000"
   </ng-template>
   <ng-template ngbSlide>
     <div class="picsum-img-wrapper">
-      <img src="../../../assets/images/snowcamp.jpg" alt="snowcamp"/>
+      <img src="../../../assets/images/snowcamp.jpg" alt="snowcamp" />
     </div>
     <div class="carousel-caption">
       <h4>Title Goes Here</h4>
@@ -26,7 +26,7 @@ interval="5000"
   </ng-template>
   <ng-template ngbSlide>
     <div class="picsum-img-wrapper">
-      <img src="../../../assets/images/astrofoto.jpg" alt="astrofotografia"/>
+      <img src="../../../assets/images/astrofoto.jpg" alt="astrofotografia" />
     </div>
     <div class="carousel-caption">
       <h4>Title Goes Here</h4>
@@ -35,7 +35,7 @@ interval="5000"
   </ng-template>
   <ng-template ngbSlide>
     <div class="picsum-img-wrapper">
-      <img src="../../../assets/images/kayak.jpg" alt="kayak"/>
+      <img src="../../../assets/images/kayak.jpg" alt="kayak" />
     </div>
     <div class="carousel-caption">
       <h4>Title Goes Here</h4>
@@ -44,148 +44,159 @@ interval="5000"
   </ng-template>
 </ngb-carousel>
 
-<div class="row">
-    <div class="col">
-        <br><br>
-        <h3>Ofertas Springflash</h3>
-        <br>
-        <div class="card-columns">
-            <div class="card bg-primary" *ngFor="let product of products">
-                <img class="card-img-top" [src]="" alt="">
-                <div class="card-body">
-                    <h4 class="card-title">{{product.name}}</h4>
-                    <p class="card-text">{{product.unitPrice}}</p>
-                </div>
-            </div>
-        </div>
-        <br>
-    </div>
+<div class="row animated fadeIn fast py-5" *ngIf="preload">
+  <div class="col-6 mx-auto">
+      <div class="alert alert-info text-center">
+          <i class="spinner-border"></i>
+          <p class="mb-0 h5">Loading</p>
+      </div>
+  </div>
 </div>
 
-<div class="row">
+<div class="container">
+  <div class="row justify-content" *ngIf="!preload">
     <div class="col">
-        <br>
-        <h3>Las mejores marcas</h3>
-        <br>
-        <div class="card-deck">
-            <div class="card bg-primary" *ngFor="let product of products">
-                <img class="card-img-top" src="" alt="">
-                <div class="card-body">
-                    <h4 class="card-title">{{product.brand}}</h4>
-                </div>
-            </div>
+      <br /><br />
+      <h3>Ofertas Springflash</h3>
+      <br />
+      <div class="card-columns">
+        <div class="card bg-light" *ngFor="let product of products">
+          <img class="card-img-top " [src]="product.img | image: 'products'" [alt]="product.name"/>
+          <div class="card-body">
+            <h4 class="card-title">{{ product.name }}</h4>
+            <p class="card-text font-weight-bold h5">{{ product.unitPrice | currencyFormat | currency:'$':'symbol':'1.0-0'}}</p>
+          </div>
         </div>
-        <br>
+      </div>
+      <br />
     </div>
-</div>
+  </div>
 
-<div class="row">
+  <div class="row">
     <div class="col">
-        <br>
-        <h3>Categorías más populares</h3>
-        <br>
-        <div class="card-group">
-            <div class="card">
-                <img class="card-img-top" src="" alt="">
-                <div class="card-body text-center">
-                    <h4 class="card-title">Categoría 1</h4>
-                </div>
-            </div>
-            <div class="card">
-                <img class="card-img-top" src="" alt="">
-                <div class="card-body text-center">
-                    <h4 class="card-title">Categoría 2</h4>
-                </div>
-            </div>
-            <div class="card">
-                <img class="card-img-top" src="" alt="">
-                <div class="card-body text-center">
-                    <h4 class="card-title">Categoría 3</h4>
-                </div>
-            </div>
-            <div class="card">
-                <img class="card-img-top" src="" alt="">
-                <div class="card-body text-center">
-                    <h4 class="card-title">Categoría 4</h4>
-                </div>
-            </div>
+      <br />
+      <h3>Las mejores marcas</h3>
+      <br />
+      <div class="card-deck">
+        <div class="card bg-primary" *ngFor="let product of products">
+          <img class="card-img-top" src="" alt="" />
+          <div class="card-body">
+            <h4 class="card-title text-center">{{ product.brand }}</h4>
+          </div>
         </div>
-        <br>
+      </div>
+      <br />
     </div>
-</div>
+  </div>
 
-<div class="row">
+  <div class="row">
     <div class="col">
-        <br>
-        <h3>Beneficios y Descuentos Springoff</h3>
-        <br>
-        <div class="card-deck">
-            <div class="card bg-info">
-                <div class="card-body">
-                    <h4 class="card-title">Descuento 1</h4>
-                </div>
-            </div>
-            <div class="card bg-info">
-                <div class="card-body">
-                    <h4 class="card-title">Descuento 2</h4>
-                </div>
-            </div>
-            <div class="card bg-info">
-                <div class="card-body">
-                    <h4 class="card-title">Descuento 3</h4>
-                </div>
-            </div>
+      <br />
+      <h3>Categorías más populares</h3>
+      <br />
+      <div class="card-group">
+        <div class="card">
+          <img class="card-img-top" src="" alt="" />
+          <div class="card-body text-center">
+            <h4 class="card-title">Categoría 1</h4>
+          </div>
         </div>
-        <br>
+        <div class="card">
+          <img class="card-img-top" src="" alt="" />
+          <div class="card-body text-center">
+            <h4 class="card-title">Categoría 2</h4>
+          </div>
+        </div>
+        <div class="card">
+          <img class="card-img-top" src="" alt="" />
+          <div class="card-body text-center">
+            <h4 class="card-title">Categoría 3</h4>
+          </div>
+        </div>
+        <div class="card">
+          <img class="card-img-top" src="" alt="" />
+          <div class="card-body text-center">
+            <h4 class="card-title">Categoría 4</h4>
+          </div>
+        </div>
+      </div>
+      <br />
     </div>
-</div>
+  </div>
 
-<div class="row">
+  <div class="row">
     <div class="col">
-        <br>
-        <h3>Métodos de pago</h3>
-        <br>
-        <div class="card-group">
-            <div class="card">
-                <div class="card-body">
-                    <h4 class="card-title">Metodo 1</h4>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card-body">
-                    <h4 class="card-title">Metodo 2</h4>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card-body">
-                    <h4 class="card-title">Metodo 3</h4>
-                </div>
-            </div>
+      <br />
+      <h3>Beneficios y Descuentos Springoff</h3>
+      <br />
+      <div class="card-deck">
+        <div class="card bg-info">
+          <div class="card-body">
+            <h4 class="card-title">Descuento 1</h4>
+          </div>
         </div>
-        <br>
+        <div class="card bg-info">
+          <div class="card-body">
+            <h4 class="card-title">Descuento 2</h4>
+          </div>
+        </div>
+        <div class="card bg-info">
+          <div class="card-body">
+            <h4 class="card-title">Descuento 3</h4>
+          </div>
+        </div>
+      </div>
+      <br />
     </div>
-</div>
+  </div>
 
-<div class="row">
+  <div class="row">
     <div class="col">
-        <br>
-        <h4 id="historial">Mí Historial</h4>
-        <br>
-        <div class="card-deck w-50">
-            <div class="card bg-primary">
-                <img class="card-img-top" src="" alt="">
-                <div class="card-body">
-                    <h4 class="card-title">Objeto 1</h4>
-                </div>
-            </div>
-            <div class="card bg-primary">
-                <img class="card-img-top" src="" alt="">
-                <div class="card-body">
-                    <h4 class="card-title">Objeto 2</h4>
-                </div>
-            </div>
+      <br />
+      <h3>Métodos de pago</h3>
+      <br />
+      <div class="card-group">
+        <div class="card">
+          <div class="card-body">
+            <h4 class="card-title">Metodo 1</h4>
+          </div>
         </div>
-        <br>
-        <br>
+        <div class="card">
+          <div class="card-body">
+            <h4 class="card-title">Metodo 2</h4>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-body">
+            <h4 class="card-title">Metodo 3</h4>
+          </div>
+        </div>
+      </div>
+      <br />
     </div>
+  </div>
+
+  <div class="row">
+    <div class="col">
+      <br />
+      <h4 id="historial">Mí Historial</h4>
+      <br />
+      <div class="card-deck w-50">
+        <div class="card bg-primary">
+          <img class="card-img-top" src="" alt="" />
+          <div class="card-body">
+            <h4 class="card-title">Objeto 1</h4>
+          </div>
+        </div>
+        <div class="card bg-primary">
+          <img class="card-img-top" src="" alt="" />
+          <div class="card-body">
+            <h4 class="card-title">Objeto 2</h4>
+          </div>
+        </div>
+      </div>
+      <br />
+      <br />
+    </div>
+  </div>
 </div>
