--- a/src/app/pages/home/home.component.sass
+++ b/src/app/pages/home/home.component.sass
@@ -16,7 +16,7 @@ ngb-carousel
 
 .card-columns
     @include media-breakpoint-only(lg)
-    column-count: 3
+    column-count: 3 !important
 
 h3
     font-family: roboto
@@ -24,5 +24,4 @@ h3
 
 #historial
     @extend h3
-    
     
