--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -2,7 +2,7 @@
 
     <app-header></app-header>
 
-    <div class="pages-wrapper container">
+    <div class="pages-wrapper">
 
         <div class="container-fluid">
 
