--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -13,7 +13,7 @@
             </div>
 
             <div class="md-col-3">
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent, #navbarSupportedContent2" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
             </div>
@@ -21,17 +21,16 @@
             <div class="col collapse navbar-collapse pt-2" id="navbarSupportedContent">
               <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Inicio</a>
+                  <a class="nav-link" routerLink="/home">Inicio</a>
                 </li>
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Categorías
                   </a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
+                    <a class="dropdown-item" *ngFor="let category of categories" [routerLink]="['/home/category/', category.description | lowercase, category._id]">{{ category.description }}</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Something else here</a>
+                    <a class="dropdown-item" routerLink="/home/categories">Todas las categorías</a>
                   </div>
                 </li>
                 <li class="nav-item">
@@ -44,11 +43,12 @@
                     <a class="nav-link" href="#">Ayuda</a>
                 </li>
               </ul>
+              <hr>
             </div>
         </div>
 
         <div class="row mt-5 mb-1">
-            <div class="col collapse navbar-collapse" id="navbarSupportedContent">
+            <div class="col collapse navbar-collapse" id="navbarSupportedContent2">
                 <ul class="navbar-nav mr-auto">
                   <li class="nav-item">
                     <a class="nav-link" href="#">Registrar</a>
