--- a/src/sass/styles.sass
+++ b/src/sass/styles.sass
@@ -4,10 +4,16 @@
 @import "../app/shared/header/header.component.sass"
 @import "../app/pages/home/home.component.sass"
 @import "../app/shared/footer/footer.component.sass"
+@import "../app/pages/categories/categories/categories.component.sass"
+
 
 html, body
-    margin: 0
-    padding: 0
+    margin: 0 !important
+    padding: 0 !important
 
 body
     background-color: #f0f0f0 !important
+
+.container-fluid
+    padding-left: 0
+    padding-right: 0
