--- a/src/app/shared/header/header.component.sass
+++ b/src/app/shared/header/header.component.sass
@@ -21,4 +21,13 @@ header
     text-align: center
     pointer-events: none
     color: #aaa
+
+.logo
+    color: #ffffff
+    font-family: 'Raleway'
+    font-size: 29px
+    font-weight: 800
+    line-height: 72px
+    margin: 0 0 13px
+    text-align: center
     
