--- a/src/app/pages/categories/categories/categories.component.html
+++ b/src/app/pages/categories/categories/categories.component.html
@@ -1,14 +1,17 @@
-<div class="row animated fadeIn fast py-5 mb-preload" *ngIf="preload">
-    <div class="col-6 mx-auto">
-        <div class="alert alert-info text-center">
-            <i class="spinner-border"></i>
-            <p class="mb-0 h5">Loading</p>
+<div class="container py-5">
+    
+    <app-breadcrumbs></app-breadcrumbs>
+    
+    <div class="row animated fadeIn fast py-5 mb-preload" *ngIf="preload">
+        <div class="col-6 mx-auto">
+            <div class="alert alert-info text-center">
+                <i class="spinner-border"></i>
+                <p class="mb-0 h5">Loading</p>
+            </div>
         </div>
     </div>
-</div>
 
-<div class="container">
-    <div class="row p-5 mb" *ngIf="!preload">
+    <div class="row mb" *ngIf="!preload">
         <div class="col">
             <div class="card-columns">
                 <div class="card" *ngFor="let category of categories">
