--- a/src/app/pages/categories/category/category.component.sass
+++ b/src/app/pages/categories/category/category.component.sass
@@ -1,4 +1,6 @@
 figure
+    position: relative
+    text-align: center
     width: 100%
     height: 400px
     overflow: hidden
@@ -11,7 +13,7 @@ figure figcaption
     color: #ffffff
     top: 50%
     left: 50%
-    transform: translate(-50%, -100%)
+    transform: translate(-50%, -50%)
 
 .parallax
   background-attachment: fixed
