--- a/src/app/pages/home/home.component.sass
+++ b/src/app/pages/home/home.component.sass
@@ -1,10 +1,11 @@
 ngb-carousel
     max-width: 100%
+    max-height: auto
     margin: 0 auto
 
 ngb-carousel img
     width: 100%
-    height: 450px
+    height: 500px
     outline: none
 
 ngb-carousel
