--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer class="footer">
     <div class="container">
-        <div class="py-0 py-1">
+        <div class="mt-1">
             <h5>SpringShop &copy;</h5>
         </div>
     </div>
