--- a/src/sass/styles.sass
+++ b/src/sass/styles.sass
@@ -5,9 +5,11 @@
 @import "../app/pages/home/home.component.sass"
 @import "../app/shared/footer/footer.component.sass"
 @import "../app/pages/categories/categories/categories.component.sass"
+@import "../app/shared/breadcrumbs/breadcrumbs.component.sass"
 
-
-html, body
+html
+    position: relative 
+    min-height: 100%
     margin: 0 !important
     padding: 0 !important
 
@@ -17,3 +19,10 @@ body
 .container-fluid
     padding-left: 0
     padding-right: 0
+
+a
+    color: #5c5757
+
+a:hover
+    color: #5c5757
+    text-decoration: none !important
