scalable project restructuring

--- a/src/sass/styles.sass
+++ b/src/sass/styles.sass
@@ -1,11 +1,12 @@
 @import "../../node_modules/bootstrap/scss/bootstrap.scss"
 @import "./variables.sass"
 @import "./mixins.sass"
-@import "../app/shared/header/header.component.sass"
-@import "../app/pages/home/home.component.sass"
-@import "../app/shared/footer/footer.component.sass"
-@import "../app/pages/categories/categories/categories.component.sass"
-@import "../app/shared/breadcrumbs/breadcrumbs.component.sass"
+@import "../app/core/header/header.component.sass"
+@import "../app/core/footer/footer.component.sass"
+@import "../app/core/breadcrumbs/breadcrumbs.component.sass"
+@import "../app/modules/pages/home/home.component.sass"
+@import "../app/modules/pages/categories/categories/categories.component.sass"
+@import "../app/modules/auth/login/login.component.sass"
 
 html
     position: relative 
